0.4.1
bugfixes:
 * fix check and default value for process period in runfile
 * fix console message for graphics process, enable/disable activation

0.4.0
features/changes:
 * get configuration run and station list in the same file, delete all arguments
   when run Jaziku, now only argument is "-runfile" and this files contains all
   the necessary to run Jaziku.
 * adds parameters for maps options in runfile
 * ignore station line in runfile that begin with "#"
 * Now maps files and maps for climate and forecasting are ordered 
   and grouped based on analysis interval
 * Implemented HPGL library for interpolation of the data maps (ordinary kriging
   in this version) and the user can change parameters for interpolation in 
   runfile 
 * Generate maps with NCL based in files output of interpolation 
 * Shapes and grids internal with particular ncl scripts and extreme lat and lon
   definition
 * Personal shape
 * Maps for correlations
 * Climate/forecasting and correlation palette colors bar for NCL
 * Posibility for run many countries or regions and group based on their names
 * Posibility to delete data outside of shape, the shape mask method consist 
   in delete all data outside boundaries of shape analyzing all points in mesh
 
bugfixes:
 * many fixies and comprobations of all features and changes
 * (especifig bug that affect 0.3 version) bug translation in phenomenon label


0.3.0
features/changes:
 * now you can run using internal files for independents variables, defining as 
   "default" in "file_I" section inside stations list file.
 * enable run with particular independent variable file
 * change period defined in argument as process period instead of common period,
   ATTENTION! this affects titles, namefiles and captions of all results
 * Result table csv file now write by lags
 * Deleted contingency table in results
 * Changed the resolution of analysis of trimesters to months and even days, now 